@@ -1,0 +1,14 @@
+# mounted-dev - Populate /dev filesystem
+#
+# Populates the /dev filesystem from /lib/udev/devices once the temporary
+# filesystem mount is in place.
+
+description	"Populate /dev filesystem"
+
+start on mounted MOUNTPOINT=/dev TYPE=tmpfs
+
+task
+
+script
+  cp -a /lib/udev/devices/* "$MOUNTPOINT"
+end script
